--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="card-body">
           <h5 class="card-title">Unit Conversion</h5>
           <p class="card-text">A simple unit conversion web application built using HTML.</p>
-          <a href="file:///C:/Users/asnav/Unit%20Conversion/index.html" target="_blank" class="btn btn-primary">Try It Out</a>
+          <a href="https://allakenaveen.github.io/unitconversion/" target="_blank" class="btn btn-primary">Try It Out</a>
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
         <div class="card-body">
           <h5 class="card-title">To-Do List</h5>
           <p class="card-text">An interactive to-do list web application created using HTML.</p>
-          <a href="file:///C:/Users/asnav/todo.html" target="_blank" class="btn btn-primary">Try It Out</a>
+          <a href="https://allakenaveen.github.io/todolist/" target="_blank" class="btn btn-primary">Try It Out</a>
         </div>
       </div>
     </div>
